# Flanker

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: release.yaml
.storybook/: preview.ts
src/: App.tsx  main.tsx  storybook.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_launcher.rs  decrease_width.rs  file_handler.rs  github.rs  image_handler.rs  increase_height.rs  main.rs  move_window_bottom_right.rs  move_window_top_right.rs  open_devtools.rs  toggle_maximize.rs  toggle_tight.rs  window_events.rs  window_position.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/file_management/: mod.rs
src-tauri/src/modules/media/: fetch_ogp_images.rs  github.rs  link_checker.rs  mod.rs  spotify_info.rs
src-tauri/src/modules/system/: mod.rs  open_devtools.rs
src-tauri/src/modules/ui/: mod.rs
src-tauri/src/modules/ui/resize/: decrease_height.rs  decrease_width.rs  increase_width.rs  mod.rs
src-tauri/src/modules/ui/window_position/: mod.rs  move_window_bottom_left.rs  move_window_top_left.rs
src/components/: SplashScreen.tsx
src/components/AppSidebar/: AppSidebar.tsx  (+4 more)
src/constants/: NewFile.ts  Text.ts
src/stories/: Button.stories.ts  Configure.mdx
src/types/: types.ts
src/utils/: alwaysOnTop.ts  backgroundUtils.ts  createNewFile.ts  errorToast.ts  handleSplashScreen.ts  isBookmarkInfoNotEmpty.ts  listFilesInDirectory.ts  loadConfig.ts  loadFileContent.ts  saveConfig.ts
(+84 files in other folders)
