[package]
name = "flanker"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-hide", "window-start-dragging", "window-set-always-on-top", "window-show", "window-maximize", "window-unminimize", "window-minimize", "window-close", "window-unmaximize", "macos-private-api", "global-shortcut-all", "protocol-asset", "http-all", "path-all", "fs-all", "os-all", "clipboard-all", "shell-open"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] } # 非同期実行環境
scraper = "0.12.0"
futures = "0.3"

# tauri-plugin-system-info = "1.0.0"
sysinfo = "0.24.0"
display-info = "0.5.1"
chrono = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
